# aptreader

./: .envrc.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  compose.override.yaml.example  compose.yaml  pyproject.toml  rxconfig.py
.github/: copilot-instructions.md
.github/instructions/: python.instructions.md
alembic/: .ruff.toml  env.py  script.py.mako
alembic/versions/: 2025_12_03_1000-81d9c23bfbc4_initial.py  2025_12_03_1129-ab662e724d7d_.py  2025_12_05_1523-246db1c6dac7_manymany.py  2025_12_05_1648-462a2aff3e48_.py  2025_12_06_0634-46b315a3dea5_.py  2025_12_06_0706-4bb1ffbc00d3_.py  2025_12_06_1218-54b233f8a63e_add_new_indexes.py  2025_12_06_1426-47ed5b57007a_.py  2025_12_06_1515-19736cab8aa5_.py  2025_12_06_1529-47905f6a8484_.py  2026_01_10_0315-fe8560280a24_postgres_migration_sadly.py  2026_01_10_1208-539c3e6bfd23_.py  2026_01_12_1030-bd1c1f7d71bb_let_there_be_typed_dates.py  2026_01_15_0942-1f750c462c84_drop_version_only_index_from_package.py  2026_01_15_1425-e08b369edf30_jsonb.py
assets/: styles.css
scripts/: gensecret.py
src/aptreader/: __init__.py  app.py  aptreader.py  constants.py  db.py  fetcher.py  models.py  repository.py  state.py  styles.py  utils.py
src/aptreader/backend/: backend.py
src/aptreader/components/: checkbox_group.py  form_field.py  logo.py  navbar.py  repo_select.py  selector.py  selectors.py  sidebar.py
src/aptreader/models/: __init__.py  links.py  package.py  packages.py  repository.py
src/aptreader/pages/: __init__.py  distributions.py  index.py  packages.py  repositories.py  settings.py
src/aptreader/states/: __init__.py  app.py  distributions.py  distro_select.py  packages.py  repo_select.py  settings.py
src/aptreader/templates/: template.py
src/aptreader/views/: distributions.py  packages.py  repositories.py
tests/: test_packages_state_filters.py
