[project]
name = "aptreader"
version = "0.1.0"
description = "an APT repository scraper and browser"
readme = "README.md"
authors = [
    { name = "Andi Powers-Holmes", email = "aholmes@omnom.net" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogzip>=1.1.0",
    "aiosqlite>=0.21.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "python-debian>=1.0.1",
    "reflex>=0.8.21",
    "typer>=0.20.0",
    "tzdata>=2025.2",
    "wrapt>=2.0.1",
]

[project.scripts]
aptreader = "aptreader.aptreader:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "ipywidgets>=8.1.8",
    "ruff>=0.14.7",
]


[tool.ruff]
# extend-exclude = ["static", "ci/templates"]
line-length = 110
src = ["src", "tests"]
target-version = "py313"

# Add rules to ban exec/eval
[tool.ruff.lint]
select = [
    "E4",  # ruff defaults, pycodestyle errors
    "E7",  # ^^
    "E9",  # ^^
    "F",   # ruff defaults, pyflakes rules
    "B",   # flake8-bugbear
    "UP",  # pyupgrade rules
    "PTH", # flake8-use-pathlib
]
ignore = [
    "B008", # Do not warn about function calls in default arguments. disnake uses this for slash commands.
    "E501", # line too long (handled by line-length)
    "B905", # zip without explicit strict=
]
unfixable = [
    "B", # flake8-bugbear autofixes can be unsafe, so disable those autofixes
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"


[tool.pyright]
enableExperimentalFeatures = true
